--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-6">
                     <ul class="menu">
                         <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
+                        <li><a href="">About 2</a></li>
                         <li><a href="">Shipping</a></li>
                         <li><a href="">Payment</a></li>
                     </ul>
