--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </div>
         </div>
     </header>
-    <main class="main">Main</main>
+    <main class="main">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint odio suscipit quidem vitae. Corporis mollitia, eligendi ratione deleniti sapiente necessitatibus sequi inventore earum cum aut vel dolor porro aperiam cupiditate.</p>
+    </main>
     <footer class="footer">Footer</footer>
 </body>
 </html>
